[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]  # Build requirements
build-backend = "setuptools.build_meta"

[project]
name = "pygbm" # name of the package must match the core folder name
dynamic = ["version"]
description = "A Python package for simulating geometric brownian motion."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Nick Flint", email = "nf393@cam.ac.uk" },
]

[project.scripts]
gbm = "pygbm.cli:main"

# Runtime dependencies
dependencies = [
    "numpy",
    "matplotlib",
]

[tool.setuptools_scm]
write_to = "pygbm/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["."]