[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pygbm" 
dynamic = ["version"]
description = "A Python package for simulating geometric Brownian motion."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Nick Flint", email = "nf393@cam.ac.uk" },
]

# Runtime dependencies should be directly under [project]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.scripts]
pygbm = "pygbm.cli:main"

[tool.setuptools_scm]
write_to = "pygbm/version.py"  # Where to write the dynamic version

[tool.setuptools.packages.find]
where = ["."]  # Ensure this points to the 'pygbm' folder
